--- a/src/styles/modules/_pokemonCard.scss
+++ b/src/styles/modules/_pokemonCard.scss
@@ -3,8 +3,8 @@
     // background-color: #f2f2f2;
     // border: 1px solid #ddd;
     padding: 16px;
-    // box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-    border-radius: 50px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 50%;
     height: 200px;
     width: 200px;
     position: relative;
@@ -13,17 +13,7 @@
     background-color: white;
     align-items: center;
     justify-content: center;
-
-    // background-image: url("https://www.freeiconspng.com/thumbs/pokeball-png/free-pokeball-download-3.png");
-
-    /* Use filter to add blur effect */
-    
-
-  
-    /* Center the image */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    border: 2px solid blue;
   }
   
   .pokemon-image {
