--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.cdnfonts.com/css/pokemon-solid');
+// @import url('https://fonts.cdnfonts.com/css/pokemon-solid');
 
 body {
     background-color: whitesmoke;
