--- a/src/styles/modules/_pokemonCard.scss
+++ b/src/styles/modules/_pokemonCard.scss
@@ -13,7 +13,8 @@
     background-color: white;
     align-items: center;
     justify-content: center;
-    border: 2px solid blue;
+    // border: 2px solid blue;
+
   }
   
   .pokemon-image {
@@ -30,10 +31,10 @@
   
   .pokemon-name {
     position: absolute;
-    bottom: 0px;
-    font-size: 24px;
+    bottom: 10px;
+    font-size: 20px;
     color: #333;
-    margin-top: 10px;
+    margin-top: -10px;
     text-decoration: none;
     // background-color: white;
     // border-radius: 50%;
