--- a/src/styles/modules/_pokemonDetail.scss
+++ b/src/styles/modules/_pokemonDetail.scss
@@ -1,29 +1,35 @@
-
-.pokemonDetail {
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 15px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  width: 300px;
-  margin: 20px;
-  height: auto;
-
-
-  &__BtnBack {
+/* Estilos para el bloque principal .pokemon-card */
+.pokemon-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 2rem;
     background-color: red;
-  }
-  
-  &__Name {
-    text-align: center;
-    font-family: "Luckiest Guy";
-    font-weight: 900;
-  }
-  &__Img {
-    border-radius: 50%;
-    border: 2px solid red;
-  }
 }
 
+// /* Estilos para el elemento .pokemon-card__back-button */
+// .pokemon-card__back-button {
+//   color: #007bff; /* Color del texto */
+//   cursor: pointer;
+//   text-decoration: underline;
+// }
+
+// /* Estilos para el encabezado .pokemon-card__name */
+// .pokemon-card__name {
+//   font-size: 24px;
+//   margin: 10px 0;
+// }
+
+// /* Estilos para la imagen .pokemon-card__image */
+// .pokemon-card__image {
+//   max-width: 100%;
+//   height: auto;
+// }
+
+// /* Estilos para los párrafos de información .pokemon-card__info */
+// .pokemon-card__info {
+//   font-size: 16px;
+//   margin: 5px 0;
+// }
