--- a/src/styles/modules/_pokemonCard.scss
+++ b/src/styles/modules/_pokemonCard.scss
@@ -1,47 +1,34 @@
+.card {
+  padding: 16px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  height: 150px;
+  width: 150px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  align-items: center;
+  justify-content: center;
 
-.pokemon-card {
-    // background-color: #f2f2f2;
-    // border: 1px solid #ddd;
-    padding: 16px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
-    position: relative;
-    display: flex;
-    align-items: center;
-    background-color: white;
-    align-items: center;
-    justify-content: center;
-    // border: 2px solid blue;
-
-  }
-  
-  .pokemon-image {
+  &-image {
     position: absolute;
-    top: 0px;
     width: 100%;
     height: 100%;
-    max-width: 150px;
-    max-height: 150px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     background-color: white;
-
   }
-  
-  .pokemon-name {
+
+  &-name {
     position: absolute;
-    bottom: 10px;
+    bottom: 20px;
     font-size: 20px;
     color: #333;
-    margin-top: -10px;
     text-decoration: none;
-    // background-color: white;
-    // border-radius: 50%;
     letter-spacing: 5px;
     color: gold;
     -webkit-text-stroke: 1px black;
-
+  }
 }
-
-  
