--- a/src/styles/modules/_pokemonDetail.scss
+++ b/src/styles/modules/_pokemonDetail.scss
@@ -1,47 +1,34 @@
-.pokemonDetail{
-    margin-top: 30%;
+.detail {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     flex-wrap: wrap;
-    height: 60%;
+    width: 500px;
     background-color: white;
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    position: relative;
 
-    h1 {
+    &-back {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        padding: 20px;
+        background-color: white;
+        border-radius: 50%;
+        cursor: pointer;
+        font-size: 1.5rem;
+    }
+
+    &-title {
         text-align: center;
         font-family: "Luckiest Guy";
         font-weight: 900;
     }
-    img {
-        height: 60%;
-        width: 60%;
+
+    &-image {
+        height: 200px;
+        width: 200px;
     }
 }
-
-// /* Estilos para el elemento .pokemon-card__back-button */
-// .pokemon-card__back-button {
-//   color: #007bff; /* Color del texto */
-//   cursor: pointer;
-//   text-decoration: underline;
-// }
-
-// /* Estilos para el encabezado .pokemon-card__name */
-// .pokemon-card__name {
-//   font-size: 24px;
-//   margin: 10px 0;
-// }
-
-// /* Estilos para la imagen .pokemon-card__image */
-// .pokemon-card__image {
-//   max-width: 100%;
-//   height: auto;
-// }
-
-// /* Estilos para los párrafos de información .pokemon-card__info */
-// .pokemon-card__info {
-//   font-size: 16px;
-//   margin: 5px 0;
-// }
